Fixing draw page height on firefox.

--- a/views/stylesheets/page/_draw.scss
+++ b/views/stylesheets/page/_draw.scss
@@ -10,6 +10,7 @@
     #canvas-container {
 		padding:0.4em;
 		background-color: #000;
+		line-height: 0; // Fixing child canvas height on Gecko
     }
 
 	
